--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~11.0.9",
     "google-libphonenumber": "^3.2.16",
     "intl-tel-input": "^17.0.3",
+    "ng-otp-input": "^1.7.1",
     "ngx-bootstrap": "^6.2.0",
     "ngx-intl-tel-input": "^3.0.5",
     "rxjs": "~6.6.0",
