--- a/angular.json
+++ b/angular.json
@@ -27,7 +27,9 @@
               "src/styles.css",
               "node_modules/intl-tel-input/build/css/intlTelInput.css"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/jquery/dist/jquery.min.js"
+            ]
           },
           "configurations": {
             "production": {
