--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
     "@angular/platform-browser": "~11.0.9",
     "@angular/platform-browser-dynamic": "~11.0.9",
     "@angular/router": "~11.0.9",
+    "@types/jquery": "^3.5.5",
+    "crypto-js": "^4.0.0",
     "google-libphonenumber": "^3.2.16",
     "intl-tel-input": "^17.0.3",
+    "jquery": "^3.5.1",
     "ng-otp-input": "^1.7.1",
     "ngx-bootstrap": "^6.2.0",
     "ngx-intl-tel-input": "^3.0.5",
