--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~11.0.9",
+    "@angular/animations": "^11.0.9",
     "@angular/common": "~11.0.9",
     "@angular/compiler": "~11.0.9",
     "@angular/core": "~11.0.9",
@@ -27,6 +27,7 @@
     "ng-otp-input": "^1.7.1",
     "ngx-bootstrap": "^6.2.0",
     "ngx-intl-tel-input": "^3.0.5",
+    "ngx-toastr": "^13.2.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
