--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "jquery": "^3.5.1",
     "ng-otp-input": "^1.7.1",
     "ngx-bootstrap": "^6.2.0",
+    "ngx-countdown": "^11.0.1",
     "ngx-intl-tel-input": "^3.0.5",
     "ngx-toastr": "^13.2.0",
     "rxjs": "~6.6.0",
