Update Doctor Profile

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~11.0.9",
     "@angular/platform-browser-dynamic": "~11.0.9",
     "@angular/router": "~11.0.9",
+    "@auth0/angular-jwt": "^5.0.2",
     "@types/jquery": "^3.5.5",
     "crypto-js": "^4.0.0",
     "google-libphonenumber": "^3.2.16",
@@ -31,6 +32,7 @@
     "ngx-countdown": "^11.0.1",
     "ngx-intl-tel-input": "^3.0.5",
     "ngx-toastr": "^13.2.0",
+    "ngx-ui-loader": "^10.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
