--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "ngx-chips": "^2.2.2",
     "ngx-countdown": "^11.0.1",
     "ngx-intl-tel-input": "^3.0.5",
+    "ngx-pagination": "^5.0.0",
     "ngx-toastr": "^13.2.0",
     "ngx-ui-loader": "^10.0.0",
     "rxjs": "~6.6.0",
