--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "intl-tel-input": "^17.0.3",
     "jquery": "^3.5.1",
     "moment": "^2.29.1",
+    "ng-circle-progress": "^1.6.0",
     "ng-otp-input": "^1.7.1",
     "ngx-bootstrap": "^6.2.0",
     "ngx-chips": "^2.2.2",
