--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "ngx-toastr": "^13.2.0",
     "ngx-ui-loader": "^10.0.0",
     "rxjs": "~6.6.0",
+    "sweetalert2": "^10.15.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
