--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "google-libphonenumber": "^3.2.16",
     "intl-tel-input": "^17.0.3",
     "jquery": "^3.5.1",
+    "jspdf": "^2.3.1",
     "libphonenumber-js": "^1.9.11",
     "moment": "^2.29.1",
     "ng-circle-progress": "^1.6.0",
