--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~11.0.9",
     "@auth0/angular-jwt": "^5.0.2",
     "@types/jquery": "^3.5.5",
+    "angularx-social-login": "^3.5.5",
     "crypto-js": "^4.0.0",
     "google-libphonenumber": "^3.2.16",
     "intl-tel-input": "^17.0.3",
