--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "ngx-chips": "^2.2.2",
     "ngx-countdown": "^11.0.1",
     "ngx-intl-tel-input": "^3.0.5",
+    "ngx-order-pipe": "^2.1.1",
     "ngx-pagination": "^5.0.0",
     "ngx-toastr": "^13.2.0",
     "ngx-ui-loader": "^10.0.0",
